fix radu show code warp on small screen

--- a/projects/drawing-shapes/style.css
+++ b/projects/drawing-shapes/style.css
@@ -97,7 +97,9 @@ header {
         }
 
         code {
+            display: grid;
             white-space: pre-wrap;
+            grid-template-columns: max-content 1fr;
         }
     }
 }
